# cdslib_agents

./: .coveragerc  .gitignore  .sonar.properties  Histogramas.py  README.md  ansatz_functional.ipynb  ansatz_oop.ipynb  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: build.yml
abmodel/: __init__.py
abmodel/agent/: __init__.py  disease.py  execution_modes.py  movement.py  neighbors.py
abmodel/analysis/: __init__.py  aggregation.py
abmodel/health_system/: hospital.py
abmodel/hospital/: simple_hospital.py
abmodel/models/: __init__.py  base.py  disease.py  health_system.py  mobility_restrictions.py  population.py
abmodel/population/: __init__.py  initial_arrangement.py  initial_population.py  population.py
abmodel/tests/: conftest.py  pytest.ini
abmodel/tests/agent/: test_disease.py  test_movement.py
abmodel/tests/models/: test_base.py  test_population.py
abmodel/tests/utils/: data_weights.txt  test_column_checkers.py  test_distribution.py  test_execution_modes.py
abmodel/tests/utils/helpers/: data_empirical.txt  (+2 more)
abmodel/utils/: __init__.py  distributions.py  execution_modes.py  units.py  utilities.py
abmodel/utils/helpers/: __init__.py  distributions.py
agents/: behaviour.py
cdslib/agent/: movement.py
cdslib/models/: population.py
cdslib/tests/agent/: test_movement.py
coverage-reports/: coverage-tests.xml
docs/source/: conf.py  index.rst
docs/source/code_docs/: agents.rst
docs/source/contribute/: documentation.rst
docs/source/start/: install.rst
tests/: .coveragerc  conftest.py  pytest.ini  test_agent_movement.py
tests/agent/: test_disease.py  test_movement.py
tests/models/: test_base.py  test_disease.py  test_mobility_restrictions.py  test_population.py
tests/population/: __init__.py
tests/utils/: __init__.py  test_column_checkers.py  test_distribution.py
tests/utils/helpers/: __init__.py  test_distributions.py
tests/utils/utilities/: __init__.py  test_execution_modes.py  test_utilities.py
xunit-reports/: xunit-result-tests.xml
(+8 files in other folders)
